--- a/quiz_MVC_client.html
+++ b/quiz_MVC_client.html
@@ -84,32 +84,52 @@ const updateController = (id) => {
 };
 
 const newController = () => {
-    // ..... introducir código
+    $("#main").html(quizForm('Añadir nuevo Quiz', 'create', 0, '', ''))
 };
 
 const createController = () => {
-    // ..... introducir código
+    let quizzes = JSON.parse(localStorage.quizzes);
+    if($('#question').val() !== "" && $('#answer').val() !== ""){
+        quizzes.push({question: $('#question').val(), answer: $('#answer').val()}); 
+        localStorage.quizzes = JSON.stringify(quizzes);
+        indexController();
+    }else{
+        alert('Complete todos los campos');
+    }
 };
 
 const deleteController = (id) => {
-    // ..... introducir código
+    console.log(id)
+
+    let quizzes = JSON.parse(localStorage.quizzes);
+    let r = confirm('¿Está seguro de que quiere eliminarlo?');
+    if(r === true){
+        quizzes.splice(id,1);
+        localStorage.quizzes = JSON.stringify(quizzes);
+    }
+    indexController();
+
 };
 
 const resetController = (id) => {
-    // ..... introducir código
+    let quizzes = initial_quizzes;
+    localStorage.quizzes = quizzes;
+    indexController();
 };
 
 
    // ROUTER
 
 const eventsController = ()=> {
-  $(document).on('click','.index',  () => indexController());
-  $(document).on('click','.play',   (e)=> playController(Number($(e.target).attr("quizid"))));
-  $(document).on('click','.check',  (e)=> checkController(Number($(e.target).attr("quizid"))));
-  $(document).on('click','.edit',   (e)=> editController(Number($(e.target).attr("quizid"))));
-  $(document).on('click','.update', (e)=> updateController(Number($(e.target).attr("quizid"))));
-
-    // ..... añadir manejadores de eventos new, create, delete y reset
+    $(document).on('click','.index',  () => indexController());
+    $(document).on('click','.play',   (e)=> playController(Number($(e.target).attr("quizid"))));
+    $(document).on('click','.check',  (e)=> checkController(Number($(e.target).attr("quizid"))));
+    $(document).on('click','.edit',   (e)=> editController(Number($(e.target).attr("quizid"))));
+    $(document).on('click','.update', (e)=> updateController(Number($(e.target).attr("quizid"))));
+    $(document).on('click', '.new', () => newController());
+    $(document).on('click', '.create', () => createController());
+    $(document).on('click', '.delete', (e) => deleteController(Number($(e.target).attr("quizid"))));
+    $(document).on('click', '.reset', (e) => resetController(Number($(e.target).attr("quizid"))));
 }
 
 
